--- a/css/base.css
+++ b/css/base.css
@@ -150,3 +150,28 @@ body {
     border-radius: 3px;
     position: relative;
 }
+
+[contenteditable="true"] {
+    position: relative;
+    overflow: hidden;
+}
+
+[contenteditable="true"]:focus::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    background: rgba(203, 208, 255, 0.7);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    animation: ripple 1s ease-out;
+}
+
+@keyframes ripple {
+    to {
+        transform: translate(-50%, -50%) scale(20);
+        opacity: 0;
+    }
+}
