--- a/css/components/tools.css
+++ b/css/components/tools.css
@@ -1,4 +1,3 @@
-/* tools.css */
 #tools {
     display: flex;
     flex-direction: column;
@@ -30,7 +29,7 @@
     min-height: 10px;
     padding: 5px 5px 5px 5px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 20px); /* Автозаполнение */
+    grid-template-columns: repeat(auto-fill, 20px);
     justify-content: space-evenly;
     gap: 5px;
     align-content: start;
@@ -62,4 +61,3 @@
     align-items: center;
     justify-content: center;
 }
-
